--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,10 @@
             <div class="col-md-12 col-lg-10">
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"></h4>
-                <p class="mbr-text mbr-fonts-style display-7">\n\n\n\n\n</p>
+                <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"></h4>
+                <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"></h4>
+                <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"></h4>
+                <p class="mbr-text mbr-fonts-style display-7"></p>
             </div>
         </div>
     </div>
