--- a/privacy-policy-for-next.html
+++ b/privacy-policy-for-next.html
@@ -132,8 +132,8 @@
             <div class="col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Sharing of information</strong></h3>
                 
-                <p class="mbr-text mbr-fonts-style display-7">We do not share any personal information other than what is shared through AdMob. AdMob may share aggregated, non-personally identifiable information with third parties for advertising and analytics purposes.
-<br>By utilizing AdMob, we may share personal information with third-party service providers that perform services on behalf of AdMob, such as hosting or data analysis. However, these service providers are bound by confidentiality agreements and are not permitted to use your information for any other purposes.<br><br>You can refer to the following link for more details:
+                <p class="mbr-text mbr-fonts-style display-7">By utilizing AdMob, we may share aggregated, non-personally identifiable information with third parties for advertising and analytics purposes.
+<br>Please note that AdMob may share personal information with third-party service providers that perform services on behalf of AdMob, such as hosting or data analysis. However, these service providers are bound by confidentiality agreements and are not permitted to use your information for any other purposes.<br><br>You can refer to the following link for more details:
 <br><strong>+</strong> <a href="https://policies.google.com/privacy#infosharing" class="text-primary">https://policies.google.com/privacy#infosharing</a><br></p>
             </div>
         </div>
