--- a/next-logic-puzzles.html
+++ b/next-logic-puzzles.html
@@ -86,7 +86,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <img src="assets/images/img-1.jpg" alt="Mobirise Website Builder">
+                        <img src="assets/images/img-1.jpg" alt="Lepton Apps">
                     </div>
                 </div>
                 <div class="col-12 col-lg">
