--- a/privacy-policy-for-nextp.html
+++ b/privacy-policy-for-nextp.html
@@ -115,12 +115,12 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="content5 cid-tK5P9xoluk" id="content5-s">
+<section id="data_deletion" data-bs-version="5.1" class="content5 cid-tK5P9xoluk" id="content5-s">
     
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <h3 id="data_deletion" class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Deletion of Data</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Deletion of Data</strong></h3>
                 
                 <p class="mbr-text mbr-fonts-style display-7">As stated above, our game does not store any personal or device data. However, if you wish to delete your game data and reset your progress as if you had just installed the game, please follow these steps:<br><br>1- Start the game (go to the main menu).
 <br>2- Select "Settings".
