--- a/privacy-policy-for-nextp.html
+++ b/privacy-policy-for-nextp.html
@@ -115,7 +115,9 @@
     </div>
 </section>
 
-<section id="data_deletion" data-bs-version="5.1" class="content5 cid-tK5P9xoluk" id="content5-s">
+<section id="data_deletion" data-bs-version="5.1" class="content5 cid-tK5P9xoluk"></section>
+
+<section data-bs-version="5.1" class="content5 cid-tK5P9xoluk" id="content5-s">
     
     <div class="container-fluid">
         <div class="row justify-content-center">
