--- a/privacy-policy-for-nextp.html
+++ b/privacy-policy-for-nextp.html
@@ -115,7 +115,7 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="content5 cid-tK5P9xoluk">
+<section>
   <p id="data_deletion"></p>
 </section>
 
