--- a/privacy-policy-for-nextp.html
+++ b/privacy-policy-for-nextp.html
@@ -115,7 +115,7 @@
     </div>
 </section>
 
-<section>
+<section data-bs-version="5.1" class="content5">
   <p id="data_deletion"></p>
 </section>
 
