--- a/privacy-policy-for-nextp.html
+++ b/privacy-policy-for-nextp.html
@@ -115,11 +115,7 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="content5">
-  <p id="data_deletion"></p>
-</section>
-
-<section data-bs-version="5.1" class="content5 cid-tK5P9xoluk" id="content5-s">
+<section id="data_deletion" data-bs-version="5.1" class="content5 cid-tK5P9xoluk">
     
     <div class="container-fluid">
         <div class="row justify-content-center">
