--- a/privacy-policy-for-nextp.html
+++ b/privacy-policy-for-nextp.html
@@ -115,7 +115,9 @@
     </div>
 </section>
 
-<section id="data_deletion" data-bs-version="5.1" class="content5 cid-tK5P9xoluk">
+<a id="data_deletion"></a>
+
+<section data-bs-version="5.1" class="content5 cid-tK5P9xoluk">
     
     <div class="container-fluid">
         <div class="row justify-content-center">
