--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
                     <div class="text-wrapper">
                         
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">At Lepton Apps, we are passionate about developing high-quality apps and games that offer excellent user experiences. Our goal is to create apps that are not only fun and engaging but also serve practical purposes for our users.<br>
-<br>We're excited to announce that we've released our first game on the Android platform: "Next - Logic Puzzles." This game is inspired by classic IQ tests and features fantastic graphics and design.<br><br></p>
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-7" href="https://play.google.com/store/apps/details?id=com.leptonapps.next">Next - Logic Puzzles</a></div>
+<br>We're excited to announce that we've released "Next - Brain Teasers" on Android. This game is inspired by classic IQ tests and features fantastic graphics and design.<br><br></p>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-7" href="https://play.google.com/store/apps/details?id=com.leptonapps.nextp">Next - Brain Teasers</a></div>
                     </div>
                 </div>
             </div>
