--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <h6 class="card-title mbr-fonts-style display-5">
                             <strong>Next</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">Next is a puzzle game that offers a series of challenging puzzles inspired by IQ tests. It has stunning graphics and images that enhance the player's experience while trying to solve each puzzle.</p>
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="next-logic-puzzles.html">more
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="next-brain-teasers">more
                             </a></div>
                     </div>
                 </div>
