--- a/next-brain-teasers.html
+++ b/next-brain-teasers.html
@@ -92,7 +92,7 @@
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
                         
-                        <p class="mbr-text mbr-fonts-style mb-4 display-7">Next is the first game we created for the Android platform, and it's a challenging puzzle game inspired by classic IQ tests.</p>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-7">Next is a game we created for the Android platform, and it's a challenging puzzle game inspired by classic IQ tests.</p>
                         
                     </div>
                 </div>
