--- a/delete-next.html
+++ b/delete-next.html
@@ -48,7 +48,7 @@
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-danger display-4" href="about.html">
                             About</a></li>
                     <li class="nav-item"><a class="nav-link link text-danger display-4" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link link text-danger display-4" href="next-logic-puzzles.html">Games</a>
+                    <li class="nav-item"><a class="nav-link link text-danger display-4" href="next-brain-teasers">Games</a>
                     </li></ul>
                 
                 
